--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "dependencies": {
+    "canvas": "^2.9.3",
     "discord.js": "^13.8.1",
-    "dotenv": "^16.0.1"
+    "dotenv": "^16.0.1",
+    "node-fetch": "^3.2.6",
+    "pango": "^0.0.3"
   },
   "name": "lessannoyingpaimon",
   "version": "1.0.0",
@@ -11,5 +14,6 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "phaylali",
-  "license": "ISC"
+  "license": "ISC",
+  "type": "module"
 }
