--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "description": "a discord bot for welcome new members of a genshin community",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
   "author": "phaylali",
   "license": "ISC",
