--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "canvas": "^2.9.3",
     "discord.js": "^13.8.1",
     "dotenv": "^16.0.1",
+    "express": "^4.18.1",
     "node-fetch": "^3.2.6",
     "pango": "^0.0.3"
   },
