--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "dependencies": {
     "canvas": "^2.9.3",
-    "discord.js": "^13.8.1",
+    "discord.js": "^14.0.3",
+    "distube": "^4.0.2",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "node-fetch": "^3.2.6",
+    "node-fetch": "^3.2.9",
     "pango": "^0.0.3"
   },
   "name": "lessannoyingpaimon",
