--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "dependencies": {
+    "@discordjs/opus": "^0.8.0",
+    "@discordjs/voice": "^0.11.0",
     "canvas": "^2.9.3",
     "discord.js": "^14.0.3",
     "distube": "^4.0.2",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "node-fetch": "^3.2.9",
-    "pango": "^0.0.3"
+    "pango": "^0.0.3",
+    "sodium": "^3.0.2"
   },
   "name": "lessannoyingpaimon",
   "version": "1.0.0",
